display on mobile phone fix

--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ header {
 
 .banner {
   height: 10.625rem;
-  max-width: 37.5rem;
+  width: 37.5rem;
 }
 
 header h1 {
@@ -153,7 +153,7 @@ header h2 {
   display: flex;
   margin: 0 auto;
   padding: 3.125rem;
-  max-width: 31.75rem;
+  width: 31.75rem;
   justify-content: center;
   font-weight: 400;
   font-style: normal;
@@ -237,8 +237,8 @@ small {
 .complete-order-btn,
 .pay-btn {
   display: block;
-  
-  width: 31.75rem
+
+  width: 31.75rem;
   margin-top: 2.188rem;
   margin-bottom: 2.188rem;
   border: none;
